@@ -1,4 +1,4 @@
 bin_PROGRAMS= gnoll
 gnoll_SOURCES= src/main.cpp src/input/src/coisinputmodule.cpp src/core/src/cgenericmessagemanager.cpp src/core/src/cmessagetype.cpp src/input/src/coisinputmanager.cpp src/graphic/src/cgraphicmodule.cpp src/graphic/src/cscenefactorystd.cpp src/graphic/src/csceneparser.cpp src/time/src/ccreateperiodiceventlistener.cpp src/time/src/cdestroyperiodiceventlistener.cpp src/time/src/ccreatedelayedeventlistener.cpp src/time/src/cdestroydelayedeventlistener.cpp src/time/src/clinuxtimer.cpp src/time/src/ctimemodule.cpp src/core/src/attributehandlerregistry.cpp src/core/src/filestream.cpp src/core/src/list.cpp src/core/src/string.cpp src/core/src/persistentobject.cpp src/core/src/persistentobjectmanager.cpp src/core/src/sourcefile.cpp src/core/src/camerafreefly.cpp src/core/src/camerathirdperson.cpp  src/core/src/inheritsattributehandler.cpp src/core/src/inherits.cpp src/core/src/cmessagemodule.cpp src/core/src/cameraspline.cpp
-AM_LDFLAGS =  `pkg-config OGRE --libs`  `pkg-config OIS --libs`  `pkg-config libxml++-2.6 --libs` `pkg-config CEGUI-OGRE --libs` -lboost_filesystem
+AM_LDFLAGS =  `pkg-config OGRE --libs`  `pkg-config OIS --libs`  `pkg-config libxml++-2.6 --libs` `pkg-config CEGUI-OGRE --libs` -lboost_filesystem -lboost_thread
 AM_CPPFLAGS=  `pkg-config OGRE --cflags ` `pkg-config OIS --cflags` `pkg-config libxml++-2.6 --cflags` `pkg-config CEGUI-OGRE --cflags` 
